# multi-agent-codenames

./: .env  .env.example  .gitignore  README.md  config.py  game_orchestrator.py  guardrails.py  main.py  pyproject.toml  quick_test_agent.py  run.py  server.py  test_request.json  tmpclaude-c369-cwd
UI/: app (1).js  app.js  index.html  styles.css
_old/: config.py  evaluation.py  evaluation_results.json  game_state.py  requirements.txt  test_api.py
_old/agents/: content_agent.py  game_master.py
agents/: __init__.py  ai_team.py  card_creator.py  chat_agent.py  operative.py  spymaster.py
cli/: game_cli.py
config/: agents.yaml  game_config.py  tasks.yaml
docs/: README.md  game-overview.md  getting-started-with-uv.md  gitWorkflow.md  implementation-plan.md  project-current-state.md
docs/archive/: README.old.md
evaluation/: evaluator.py
game/: __init__.py  board.py  game_manager.py  validators.py
models/: __init__.py  card.py  enums.py  game_state.py
server/: app.py  routes.py  tts_service.py  ws_manager.py
static/: app.js  index.html  styles.css
tools/: __init__.py  board_tools.py  tavily_search.py
